2009-11-10  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej Stachowiak.

        Fix WebGL demos to work with renamed WebGL primitives

        * blog-files/webgl/Earth.html:
        * blog-files/webgl/ManyPlanetsDeep.html:
        * blog-files/webgl/SpinningBox.html:
        * blog-files/webgl/SpiritBox.html:
        * blog-files/webgl/TeapotPerPixel.html:
        * blog-files/webgl/TeapotPerVertex.html:
        * blog-files/webgl/WebGL+CSS.html:
        * blog-files/webgl/resources/CanvasMatrix.js:
        (CanvasMatrix4.prototype.getAsWebGLFloatArray):
        * blog-files/webgl/resources/utils3d.js:
        (makeBox):
        (makeSphere):
        (doLoadObj):

2009-11-06  Dirk Schulze  <krit@webkit.org>

        Rubber stamped by Eric Seidel.

        Update SVG status page. We support feMorphology now.
        Set lightning filters to unimplemented.

        * projects/svg/status.xml:

2009-11-06  Jeff Schiller  <codedread@gmail.com>

        Reviewed by Darin Adler.

        SVG Status page update
        https://bugs.webkit.org/show_bug.cgi?id=31179

        * projects/svg/status.xml:

2009-11-03  Darin Adler  <darin@apple.com>

        Set the MIME type for all PNG files in this directory.

        * blog-files/3d-transforms/mighty-cubes.png: Added property svn:mime-type.
        * blog-files/3d-transforms/poster-circle.png: Added property svn:mime-type.
        * blog-files/InspectorDatabaseBrowser.png: Modified property svn:mime-type.
        * blog-files/acid3-100.png: Modified property svn:mime-type.
        * blog-files/acid3-full-rendering-pass.png: Modified property svn:mime-type.
        * blog-files/acid3-rendering-reference.png: Modified property svn:mime-type.
        * blog-files/acid3-screenshot.png: Modified property svn:mime-type.
        * blog-files/acid3-timing-screenshot.png: Modified property svn:mime-type.
        * blog-files/acid3-timing.png: Modified property svn:mime-type.